finally got the date parsed correctly

--- a/Laboration_3/Style/main.css
+++ b/Laboration_3/Style/main.css
@@ -1,1 +1,10 @@
-#map { height: 180px; }
+#map {
+    float: left;
+    height: 700px;
+    width: 700px;
+}
+#output {
+    float: left;
+    margin-left: 30px;
+    width: 350px;
+}
