--- a/Projekt/Style/Style.css
+++ b/Projekt/Style/Style.css
@@ -55,7 +55,7 @@ input{
     border-left: 2px solid white;
     border-bottom: 2px solid #a5b2b8;
     border-right: 2px solid #a5b2b8;
-    padding: 5px;
+    padding: 15px;
 }
     h4{
         margin-left: 2px;
@@ -66,4 +66,14 @@ input{
     }
     p{
         margin-top: 50px;
+    }
+    .containerphoto{
+        float: left;
+        position: relative;
+    }
+    .pirate{
+        width: 40%;
+        position:absolute;
+        top: 0;
+        left: 0;
     }
